<resources>
    <string name="app_name">SmartGreenAdapt</string>
    <string name="title_information">Information</string>
    <string name="title_state">State</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_no_hay_Notificaciones">No hay notificaciones</string>
    <string name="text_temperature">Temperature</string>
    <string name="text_feels_like">Feels like</string>
    <string name="text_luminosity">Luminosity</string>
    <string name="text_humidity">Humidity</string>
    <string name="text_airquality">Air Quality</string>
    <string name="text_wind">Wind</string>
    <string name="text_pressure">Pressure</string>
    <string name="text_temperature_max">Temperature Max</string>
    <string name="text_temperature_min">Temperature Min</string>
    <string name="text_weather">Weather</string>
    <string name="text_recommendations">Recommendations</string>
    <string name="text_state">State</string>
    <string name="text_type">Type</string>
    <string name="text_valid_values">Valid values</string>
    <string name="text_greenhouse">Greenhouse</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_about">About</string>
    <string name="action_profile">Profile</string>
    <string name="text_project">Project:</string>
    <string name="text_prime">Premios Cátedra Telefónica</string>
    <string name="value_project">Smart GreenAdapt</string>
    <string name="text_author">Author:</string>
    <string name="value_author1">Gloria Díaz</string>
    <string name="value_author2">Mª Victoria Morales</string>
    <string name="text_initial_date">Initial date:</string>
    <string name="value_initial">21/10/2021</string>
    <string name="text_final_date">Final date:</string>
    <string name="value_final_date">20/06/2022</string>
    <string name="action_logout">Log out</string>
    <string name="action_register">Register</string>
    <string name="text_register">Don\'t have an Account?\nRegister down</string>
    <string name="text_login">Login</string>
    <string name="text_username">Username: </string>
    <string name="value_author3">Enrique Moguel</string>
    <string name="delete_account">Delete account</string>
    <string name="text_No_States">No hay actuadores</string>
    <string name="imagen_que_visualiza_el_tipo_de_actuador">Imagen que visualiza el tipo de actuador</string>
    <string name="action_edit">Edit GH</string>
    <string name="action_delete">Delete GH</string>
    <string name="text_id_user">ID user</string>
    <string name="text_name_gh">Name greenhouse</string>
    <string name="save">Save</string>
    <string name="action_add">Add GH</string>
    <string name="text_date">Date</string>
</resources>