<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_greenhouse"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete_greenhouse"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"
        android:visible="false"/>
</menu>