<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SmartGreenAdapt.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar_general" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/text_prime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/text_prime"
            android:textSize="@dimen/margin_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
            android:id="@+id/text_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_project"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/value_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_project"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_author"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/value_author1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_author1"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/value_author2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/value_author2"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/value_author3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/value_author3"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_initial_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64sp"
            android:text="@string/text_initial_date"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/value_initial_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_initial"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_final_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/text_final_date"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/value_final_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_final_date"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>