<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.information.InformationFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/greenhouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green_100"
                android:gravity="center"

                android:text="@string/text_greenhouse"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <TableRow>
                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_temperature"
                    android:textSize="@dimen/text_size_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                <TextView
                    android:id="@+id/airquality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_airquality"
                    android:textSize="@dimen/text_size_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/value_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
                <TextView
                    android:id="@+id/value_airquality"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:layout_marginTop="@dimen/subtext_margin_item">

                <TextView
                    android:id="@+id/luminosity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_luminosity"
                    android:textSize="@dimen/text_size_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_humidity"
                    android:textSize="@dimen/text_size_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/value_luminosity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
                <TextView
                    android:id="@+id/value_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_100"
        android:gravity="center"

        android:text="@string/text_weather"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TableRow
        android:background="@color/green_50">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"

            android:text="@string/text_date"
            android:textSize="@dimen/text_weather"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
        <TextView
            android:id="@+id/stateW"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"

            android:text="@string/text_state"
            android:textSize="@dimen/text_weather"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    </TableRow>

    <TableRow
        android:background="@color/green_50">
        <TextView
            android:id="@+id/value_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/value_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/subtext_margin_item">

            <TableRow>
                <TextView
                    android:id="@+id/temp"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_temperature"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                <TextView
                    android:id="@+id/thermalSensation"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:text="@string/text_feels_like"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/value_temp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

                <TextView
                    android:id="@+id/value_thermal_sensationW"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:layout_marginTop="@dimen/subtext_margin_item">
                <TextView
                    android:id="@+id/tempMin"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_temperature_min"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

                <TextView
                    android:id="@+id/tempMax"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_temperature_max"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            </TableRow>
            <TableRow>
                <TextView
                    android:id="@+id/value_tempMin"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />
                <TextView
                    android:id="@+id/value_tempMax"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:layout_marginTop="@dimen/subtext_margin_item">

                <TextView
                    android:id="@+id/pressure"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_pressure"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
                <TextView
                    android:id="@+id/humidityW"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_humidity"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/value_pressure"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>
                <TextView
                    android:id="@+id/value_humidityW"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>


            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:layout_marginTop="@dimen/subtext_margin_item">
                <TextView
                    android:id="@+id/wind"
                    android:gravity="center"
                    android:layout_weight="1"

                    android:text="@string/text_wind"
                    android:textSize="@dimen/text_weather"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            </TableRow>
                <TableRow>
                <TextView
                    android:id="@+id/value_wind"
                    android:gravity="center"

                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"/>

            </TableRow>
        </TableLayout>

</LinearLayout>
