<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutDetalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.SmartGreenAdapt.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar_general" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:fitsSystemWindows="true">
            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_margin"
                android:layout_marginTop="@dimen/button_state"
                android:paddingTop="@dimen/text_margin"
                android:selectAllOnFocus="true"
                android:text="@string/text_name_gh"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/value_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subtext_margin_item"
                android:gravity="center"
                android:singleLine="true"
                android:hint="@string/text_name_gh"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/text_id_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/text_margin"
                android:layout_marginTop="@dimen/button_state"
                android:paddingTop="@dimen/text_margin"
                android:selectAllOnFocus="true"
                android:text="@string/text_id_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/value_id_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/subtext_margin_item"
                android:gravity="center"
                android:singleLine="true"
                android:hint="@string/text_id_user"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/text_margin"
                android:layout_marginTop="@dimen/button_state"
                android:paddingTop="@dimen/text_margin"
                >
                <TextView
                    android:id="@+id/text_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:textColor="@color/grey"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/value_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_username"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:visibility="invisible"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            </LinearLayout>
            <Button
                android:id="@+id/save"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:backgroundTint="@color/green_700"
                android:textColor="@color/white"
                android:text="@string/save">

            </Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

